fixed up bugs related to javascript folder moves
Former-commit-id: 5ca847a4ddb5211c67071a3e2e81855f636f9b8b

--- a/src/angular-app/scriptureforge/sfchecks/partials/question.html
+++ b/src/angular-app/scriptureforge/sfchecks/partials/question.html
@@ -1,6 +1,6 @@
 <div class="span5">
 	<h2 class="pull-left" ng-show="text.audioUrl && audioReady">
-		<a sgw-sound-player state="state" href="text.audioUrl"><i ng-class="$parent.$parent.audioIcon()" tooltip="Play audio"></i></a>
+		<a sgw-sound-player state="state" href="text.audioUrl"><i ng-class="$parent.audioIcon()" tooltip="Play audio"></i></a>
 		<a ng-href="{{audioDownloadUrl}}"><i class="icon-download" tooltip="Download audio"></i></a>
 	</h2>
 	<h2>{{text.title}}</h2>
