--- a/src/angular-app/languageforge/lexicon/views/input-systems.html
+++ b/src/angular-app/languageforge/lexicon/views/input-systems.html
@@ -1,4 +1,4 @@
-<form>
+<div>
 <div class="row-fluid">
 	<!-- Left column: input system list -->
 	<div class="span3">
@@ -95,5 +95,5 @@
 {{currentInputSystemTag}}
 {{lists|json}}
 </pre>
-</form>
+</div>
 	
