disable Fields Settings - Hidden if empty

--- a/src/angular-app/languageforge/lexicon/views/settings.html
+++ b/src/angular-app/languageforge/lexicon/views/settings.html
@@ -51,8 +51,8 @@
 					<label class="control-label" for="displayName">Display Name</label>
 					<div class="controls">
 						<input type="text" id="displayName" data-ng-model="fieldconfig[currentFieldName].label"/>
-						<label class="checkbox" data-ng-show="false">
-							<input type="checkbox" data-ng-model="fieldconfig[currentFieldName].hideEmpty"/>Hidden if empty
+						<label class="checkbox">
+							<input type="checkbox" disabled data-ng-model="fieldconfig[currentFieldName].hideEmpty"/>Hidden if empty
 						</label>
 					</div>
 				</div>
