wip scriptureforge paratext export
Former-commit-id: c4670e54991fd0a95e5eb19fcc353e0d2593855c

--- a/src/angular-app/common/css/palaso-ui.css
+++ b/src/angular-app/common/css/palaso-ui.css
@@ -111,7 +111,7 @@ form.control-bar {
 	border-bottom: 1px solid #b3cee1;
 	border-right: 1px solid #b3cee1;
 	padding: 3px 4px 3px 4px;
-	margin: 2px 2px 2px 0;
+	margin: 2px 2px 2px 5px;
 	text-decoration: none;
 	font-size: 90%;
 	line-height: 1.4;
