--- a/src/angular-app/languageforge/lexicon/views/settings.html
+++ b/src/angular-app/languageforge/lexicon/views/settings.html
@@ -61,8 +61,8 @@
 				<div class="control-group" data-ng-show="editInputSystems.collapsed">
 					<label class="control-label" for="inputSystem">Input Systems</label>
 					<ul class="unstyled indent1"  id="inputSystem">
-						<li data-ng-click="selectList(inputSystemTag)" data-ng-repeat="(inputSystemTag, inputSystem) in config.inputSystems">
-							<div class="checkbox"><input data-ng-model="currentListsEnabled[inputSystemTag]" type="checkbox"/>{{inputSystem.abbreviation}}</div>
+						<li data-ng-repeat="(inputSystemTag, inputSystem) in config.inputSystems">
+							<label class="checkbox"><input data-ng-model="currentField.inputSystems[inputSystemTag]" type="checkbox"/>{{inputSystem.abbreviation}}</label>
 						</li>
 					</ul>
 					<a href="" data-ng-click="editInputSystems.collapsed = false">Edit input systems</a>
