cleanup project context to get project id from MainCtrl (don't need local injection)

--- a/src/angular-app/languageforge/lexicon/views/input-systems.html
+++ b/src/angular-app/languageforge/lexicon/views/input-systems.html
@@ -92,8 +92,8 @@
 	</div>
 </div>
 <pre data-ng-show="showPre">
-{{currentInputSystemTag}}
-{{lists|json}}
+currentInputSystemTag: {{currentInputSystemTag}}
+lists {{lists|json}}
 </pre>
 </div>
 	
