Field Settings Input Systems - loads existing config to controls

--- a/src/angular-app/languageforge/lexicon/views/settings.html
+++ b/src/angular-app/languageforge/lexicon/views/settings.html
@@ -15,28 +15,28 @@
 			<dl class="picklists">
 				<dt>Lex Entry</dt>
 				<dd><div class="controls">
-					<div data-ng-click="selectField('lexeme')" data-ng-class="{selected:currentFieldName == 'lexeme'}">
+					<div data-ng-click="selectField('lexeme')" data-ng-class="{selected:currentField.name == 'lexeme'}">
 						<div class="checkbox"><input type="checkbox" disabled checked> {{fieldconfig['lexeme'].label}}</div>
 					</div>
 				</div></dd>
 				<dt>Lex Senses</dt>
 				<dd><div class="controls">
-					<div data-ng-click="selectField('definition')" data-ng-class="{selected:currentFieldName == 'definition'}">
+					<div data-ng-click="selectField('definition')" data-ng-class="{selected:currentField.name == 'definition'}">
 						<div class="checkbox"><input type="checkbox" data-ng-model="fieldconfig['definition'].visible"> {{fieldconfig['definition'].label}}</div>
 					</div>
-					<div data-ng-click="selectField('partOfSpeech')" data-ng-class="{selected:currentFieldName == 'partOfSpeech'}">
+					<div data-ng-click="selectField('partOfSpeech')" data-ng-class="{selected:currentField.name == 'partOfSpeech'}">
 						<div class="checkbox"><input type="checkbox" data-ng-model="fieldconfig['partOfSpeech'].visible"> {{fieldconfig['partOfSpeech'].label}}</div>
 					</div>
-					<div data-ng-click="selectField('semanticDomainValue')" data-ng-class="{selected:currentFieldName == 'semanticDomainValue'}">
+					<div data-ng-click="selectField('semanticDomainValue')" data-ng-class="{selected:currentField.name == 'semanticDomainValue'}">
 						<div class="checkbox"><input type="checkbox" data-ng-model="fieldconfig['semanticDomainValue'].visible"> {{fieldconfig['semanticDomainValue'].label}}</div>
 					</div>
 				</div></dd>
 				<dt>Lex Examples</dt>
 				<dd><div class="controls">
-					<div data-ng-click="selectField('example')" data-ng-class="{selected:currentFieldName == 'example'}">
+					<div data-ng-click="selectField('example')" data-ng-class="{selected:currentField.name == 'example'}">
 						<div class="checkbox"><input type="checkbox" data-ng-model="fieldconfig['example'].visible"> {{fieldconfig['example'].label}}</div>
 					</div>
-					<div data-ng-click="selectField('translation')" data-ng-class="{selected:currentFieldName == 'translation'}">
+					<div data-ng-click="selectField('translation')" data-ng-class="{selected:currentField.name == 'translation'}">
 						<div class="checkbox"><input type="checkbox" data-ng-model="fieldconfig['translation'].visible"> {{fieldconfig['translation'].label}}</div>
 					</div>
 				</div></dd>
@@ -46,13 +46,13 @@
 		<!-- Right column: field setup -->
 		<div class="span9">
 			<div class="well">
-				<h3>{{fieldconfig[currentFieldName].label}} Field Setup</h3>
+				<h3>{{fieldconfig[currentField.name].label}} Field Setup</h3>
 				<div class="control-group">
 					<label class="control-label" for="displayName">Display Name</label>
 					<div class="controls">
-						<input type="text" id="displayName" data-ng-model="fieldconfig[currentFieldName].label"/>
+						<input type="text" id="displayName" data-ng-model="fieldconfig[currentField.name].label"/>
 						<label class="checkbox">
-							<input type="checkbox" disabled data-ng-model="fieldconfig[currentFieldName].hideEmpty"/>Hidden if empty
+							<input type="checkbox" disabled data-ng-model="fieldconfig[currentField.name].hideEmpty"/>Hidden if empty
 						</label>
 					</div>
 				</div>
@@ -78,6 +78,7 @@
 		
 		</div>
 <pre data-ng-show="showPre">
+currentField.inputSystems {{currentField.inputSystems | json}}
 config.entry {{config.entry|json}}
 </pre>
 		</div>
