--- a/src/angular-app/sfchecks/partials/questions-settings.html
+++ b/src/angular-app/sfchecks/partials/questions-settings.html
@@ -67,18 +67,21 @@
 	<tab heading="ParaTExt Export">
 	    <div ng-controller="ParatextExportTextCtrl" class="well">
 	        <h4>Export Text Answers/Comments to a ParaTExt XML file</h4>
-	        <pre>{{export|json}}</pre>
-	        <div class="pull-right" style="margin-right:200px" ng-show="download.complete">
-    	        <p class="text-success">Ready to Download: 
-    	            <span ng-show="download.answerCount > 0" class="label label-success">{{download.answerCount}} answers</span>
-    	            <span ng-show="download.commentCount > 0" class="label label-info">{{download.commentCount}} comments</span>
+	        <div class="pull-right" style="margin-right:200px" ng-show="download.totalCount">
+    	        <p ng-show="download.totalCount > 0" class="text-success">Ready to Download: 
+    	            <span ng-show="download.answerCount > 0" class="label label-success">{{download.answerCount}} answer(s)</span>
+    	            <span ng-show="download.commentCount > 0" class="label label-info">{{download.commentCount}} comment(s)</span>
                 </p>
     	        <button ng-click="downloadExport()" class="btn btn-primary">Download ParaTExt XML File</button>
 	        </div>
-	        <label>ParaTExt User Name <input type="text" name="username" ng-model="export.username" placeholder="e.g. Joe Smith"/></label>
+	        <form name="exportForm">
+	        <label>ParaTExt User Name <input type="text" required name="username" ng-model="export.username" placeholder="e.g. Joe Smith"/></label>
 	        <label><input type="checkbox" checked name="exportAnswers" disabled /> Export Answers</label>
 	        <label><input type="checkbox" checked name="exportComments" ng-model="export.exportComments" /> Export Comments</label>
             <label>Tags to Export: (<a ng-click="export.tagEditorVisible = !export.tagEditorVisible">Select Tags</a>) <p style="font-weight:bold" ng-show="export.tags.length == 0">None Selected</p><view-tags rights-delete="returnTrue()" tags="export.tags"></view-tags></label>
+	        <button ng-disabled="exportForm.$invalid || download.inprogress" ng-click="startExport()" class="btn">Start Export</button><span ng-show="download.inprogress"><img src="/images/loading-small.gif" style="position: absolute; padding-left: 5px; padding-top: 8px;" /></span>
+	        <p ng-show="download.complete && download.totalCount == 0" class="text-error">No answers/comments were exported.  Make sure you selected the correct tags and try again, or remove tags to export all answers/comments</p>
+	        </form>
 			<div class="overlay" ng-show="export.tagEditorVisible">
     			<div class="overlay-bg">
     				<form>
@@ -89,7 +92,6 @@
     				</form>
     			</div>
 			</div>
-	        <button ng-disabled="download.complete || export.username == '' || download.inprogress" ng-click="startExport()" class="btn">Begin Export</button>
 	    </div>
 
 	</tab>
