--- a/src/angular-app/sfchecks/partials/questions-settings.html
+++ b/src/angular-app/sfchecks/partials/questions-settings.html
@@ -75,20 +75,20 @@
     	        <button ng-click="downloadExport()" class="btn btn-primary">Download ParaTExt XML File</button>
 	        </div>
 	        <form name="exportForm">
-	        <label>ParaTExt User Name <input type="text" required name="username" ng-model="export.username" placeholder="e.g. Joe Smith"/></label>
+	        <label>ParaTExt User Name <input type="text" required name="username" ng-model="exportConfig.username" placeholder="e.g. Joe Smith"/></label>
 	        <label><input type="checkbox" checked name="exportAnswers" disabled /> Export Answers</label>
-	        <label><input type="checkbox" checked name="exportComments" ng-model="export.exportComments" /> Export Comments</label>
-            <label>Tags to Export: (<a ng-click="export.tagEditorVisible = !export.tagEditorVisible">Select Tags</a>) <p style="font-weight:bold" ng-show="export.tags.length == 0">None Selected</p><view-tags rights-delete="returnTrue()" tags="export.tags"></view-tags></label>
+	        <label><input type="checkbox" checked name="exportComments" ng-model="exportConfig.exportComments" /> Export Comments</label>
+            <label>Tags to Export: (<a ng-click="exportConfig.tagEditorVisible = !exportConfig.tagEditorVisible">Select Tags</a>) <p style="font-weight:bold" ng-show="exportConfig.tags.length == 0">None Selected</p><view-tags rights-delete="returnTrue()" tags="exportConfig.tags"></view-tags></label>
 	        <button ng-disabled="exportForm.$invalid || download.inprogress" ng-click="startExport()" class="btn">Prepare Export</button><span ng-show="download.inprogress"><img src="/images/loading-small.gif" style="position: absolute; padding-left: 5px; padding-top: 8px;" /></span>
 	        <p ng-show="download.complete && download.totalCount == 0" class="text-error">No answers/comments were exported.  Make sure you selected the correct tags and try again, or remove tags to export all answers/comments</p>
 	        </form>
-			<div class="overlay" ng-show="export.tagEditorVisible">
+			<div class="overlay" ng-show="exportConfig.tagEditorVisible">
     			<div class="overlay-bg">
     				<form>
     					<label for="inputtagstring">Specify tags (comma-separated):</label>
-    					<add-tags tags="export.tags"></add-tags>
+    					<add-tags tags="exportConfig.tags"></add-tags>
     					<label></label>
-    					<button ng-click="export.tagEditorVisible=false" class="btn"><i class="icon-ok"></i>OK</button>
+    					<button ng-click="exportConfig.tagEditorVisible=false" class="btn"><i class="icon-ok"></i>OK</button>
     				</form>
     			</div>
 			</div>
