--- a/src/angular-app/languageforge/lexicon/views/settings.html
+++ b/src/angular-app/languageforge/lexicon/views/settings.html
@@ -201,8 +201,7 @@ config.entry {{config.entry|json}}
 		
 		</div>
 <pre data-ng-show="showPre">
-currentTaskName {{currentTaskName}}
-config.tasks['{{currentTaskName}}'] {{config.tasks[currentTaskName]|json}}
+config.tasks['{{currentTaskName}}'] = {{config.tasks[currentTaskName] | json}}
 </pre>
 		</div>
 	</tab>
